charts/camunda-platform/test/operate/golden/deployment.golden.yaml
---
# Source: camunda-platform/charts/operate/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-operate
  labels:
    app: camunda-platform
    app.kubernetes.io/name: operate
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.1.7"
    app.kubernetes.io/component: operate
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: operate
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: operate
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: operate
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.1.7"
        app.kubernetes.io/component: operate
    spec:
      imagePullSecrets:
        []
      containers:
      - name: operate
        image: "camunda/operate:8.1.7"
        imagePullPolicy: IfNotPresent
        env:
          - name: SPRING_PROFILES_ACTIVE
            value: "identity-auth"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI
            value: "http://camunda-platform-tes:80/auth/realms/camunda-platform"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI
            value: "http://camunda-platform-tes:80/auth/realms/camunda-platform/protocol/openid-connect/certs"
          - name: CAMUNDA_OPERATE_IDENTITY_ISSUER_URL
            value: "http://localhost:18080/auth/realms/camunda-platform"
          - name: CAMUNDA_OPERATE_IDENTITY_ISSUER_BACKEND_URL
            value: "http://camunda-platform-tes:80/auth/realms/camunda-platform"
          - name: CAMUNDA_OPERATE_IDENTITY_CLIENT_ID
            value: "operate"
          - name: CAMUNDA_OPERATE_IDENTITY_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: "camunda-platform-test-operate-identity-secret"
                key: operate-secret
          - name: CAMUNDA_OPERATE_IDENTITY_AUDIENCE
            value: "operate-api"
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 600m
            memory: 400Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/operate/config/application.yml
          subPath: application.yml
      volumes:
      - name: config
        configMap:
          name: camunda-platform-test-operate
          defaultMode: 484
