charts/camunda-platform/test/operate/golden/service.golden.yaml
---
# Source: camunda-platform/charts/operate/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-platform-test-operate
  labels:
    app: camunda-platform
    app.kubernetes.io/name: operate
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.0.0-rc1"
    app.kubernetes.io/component: operate
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: operate
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: operate
